--- a/.github/workflows/shedule.yml
+++ b/.github/workflows/shedule.yml
@@ -1,13 +1,12 @@
 # This workflow will install Python dependencies, run tests and lint with a single version of Python
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
 
-name: Python application
+name: Cron
 
 on:
-  push:
-    branches: [ "*" ]
-  pull_request:
-    branches: [ "*" ]
+  schedule:
+    # * is a special character in YAML so you have to quote this string
+    - cron:  '30 9 * * *'
 jobs:
   build:
 
@@ -44,5 +43,5 @@ jobs:
         # Stage the file, commit and push
         git add checkpoint
         git add export
-        git commit -m "new date commit"
+        git commit -m "Плановое обучение"
         git push origin master
