--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -17,30 +17,31 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: "3.10"
+      
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip3 install gpt-2-simple
+      
     - name: Run neural
       run: |
         python3 main.py
+      
     - name: Run ls
       run: |
         ls -ln
+      
     - name: Run cat
       run: |
         cat export/gpt_2_gen_texts.txt
-
-    - name: setup git config
+      
+    - name: Commit files
       run: |
-        # setup the username and email. I tend to use 'GitHub Actions Bot' with no email by default
-        git config user.name "GitHub Actions Bot"
-        git config user.email "<>"
-
-    - name: commit
-      run: |
-        # Stage the file, commit and push
-        git add checkpoint
-        git add export
-        git commit -m "Обучение"
-        git push origin master
+        git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
+        git config --local user.name "github-actions[bot]"
+        git commit -a -m "Внеплановое обучение"
+    - name: Push changes
+      uses: ad-m/github-push-action@master
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        branch: ${{ github.ref }}
